force-app/main/default/objects/Rezervace__c/Rezervace__c.object-meta.xml
<CustomObject>
    <label>Rezervace</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Kód Rezervace</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rezervace</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>