force-app/main/default/objects/Rezervace__c/fields/Pracovnik__c.field-meta.xml
<CustomField>
    <fullName>Pracovnik__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pracovník</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rezervace</relationshipName>
    <type>Lookup</type>
</CustomField>