force-app/main/default/objects/Rezervace__c/fields/Stav__c.field-meta.xml
<CustomField>
    <fullName>Stav__c</fullName>
    <defaultValue>&quot;Nová&quot;</defaultValue>
    <label>Stav</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nová</fullName>
            </value>
            <value>
                <fullName>Čeká schválení</fullName>
            </value>
            <value>
                <fullName>Schválená</fullName>
            </value>
            <value>
                <fullName>Zamítnuta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>