force-app/main/default/objects/Rezervace__c/fields/Udalost__c.field-meta.xml
<CustomField>
    <fullName>Udalost__c</fullName>
    <label>Událost</label>
    <referenceTo>Udalost__c</referenceTo>
    <relationshipLabel>Rezervace</relationshipLabel>
    <relationshipName>Rezervace</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>