force-app/main/default/objects/Rezervace__c/fields/Uzivatel_a_Udalost_ID__c.field-meta.xml
<CustomField>
    <fullName>Uzivatel_a_Udalost_ID__c</fullName>
    <label>Uzivatel a Udalost ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>