force-app/main/default/objects/Rezervace__c/validationRules/Pracovnik_zaklada_jen_pro_sebe.validationRule-meta.xml
<ValidationRule>
    <fullName>Pracovnik_zaklada_jen_pro_sebe</fullName>
    <active>false</active>
    <errorConditionFormula>$User.Id !=  Pracovnik__r.Id</errorConditionFormula>
    <errorDisplayField>Pracovnik__c</errorDisplayField>
    <errorMessage>Můžete zakládat rezervaci jen pro sebe!</errorMessage>
</ValidationRule>